--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "leaflet": "^0.7.7",
     "lodash": "^4.13.1",
     "numeral": "^1.5.3",
+    "papaparse": "^4.6.3",
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
     "react-router": "^2.5.2",
